--- a/index.html
+++ b/index.html
@@ -136,6 +136,13 @@
             box-shadow: 0 0 0 3px rgba(37, 150, 190, 0.1);
         }
 
+        .timezone-display {
+            background: #e8f5e8;
+            border: 2px solid #4caf50;
+            color: #2e7d32;
+            font-weight: 600;
+        }
+
         .controls {
             text-align: center;
             margin-bottom: 40px;
@@ -298,11 +305,15 @@
                     <h2>Route 1</h2>
                     <div class="form-group">
                         <label for="location1">Origin Location Code:</label>
-                        <input type="text" id="location1" placeholder="e.g., NYC, 10001, New York">
+                        <input type="text" id="location1" placeholder="e.g., NYC, 10001, New York" oninput="updateTimezone(1)">
                     </div>
                     <div class="form-group">
                         <label for="address1">Origin Address:</label>
                         <input type="text" id="address1" placeholder="Starting address">
+                    </div>
+                    <div class="form-group">
+                        <label for="timezone1">Detected Timezone:</label>
+                        <input type="text" id="timezone1" placeholder="Enter location code above" readonly class="timezone-display">
                     </div>
                     <div class="form-group">
                         <label for="meetpointCode1">Meetpoint Scheduler Code:</label>
@@ -326,11 +337,15 @@
                     <h2>Route 2</h2>
                     <div class="form-group">
                         <label for="location2">Origin Location Code:</label>
-                        <input type="text" id="location2" placeholder="e.g., CHI, 60601, Chicago">
+                        <input type="text" id="location2" placeholder="e.g., CHI, 60601, Chicago" oninput="updateTimezone(2)">
                     </div>
                     <div class="form-group">
                         <label for="address2">Origin Address:</label>
                         <input type="text" id="address2" placeholder="Starting address">
+                    </div>
+                    <div class="form-group">
+                        <label for="timezone2">Detected Timezone:</label>
+                        <input type="text" id="timezone2" placeholder="Enter location code above" readonly class="timezone-display">
                     </div>
                     <div class="form-group">
                         <label for="meetpointCode2">Meetpoint Scheduler Code:</label>
@@ -402,6 +417,14 @@
                     'America/Los_Angeles': [[90001, 96199], [97001, 97999], [98001, 99499]],
                     'America/Phoenix': [[85001, 86999]]
                 };
+
+                this.timezoneNames = {
+                    'America/New_York': 'Eastern Time (EST/EDT)',
+                    'America/Chicago': 'Central Time (CST/CDT)',
+                    'America/Denver': 'Mountain Time (MST/MDT)',
+                    'America/Los_Angeles': 'Pacific Time (PST/PDT)',
+                    'America/Phoenix': 'Arizona Time (MST)'
+                };
             }
 
             detectTimezone(location) {
@@ -428,6 +451,10 @@
                 else if (cleanLocation.includes('west') || cleanLocation.includes('pacific')) return 'America/Los_Angeles';
 
                 return 'America/New_York';
+            }
+
+            getTimezoneName(timezone) {
+                return this.timezoneNames[timezone] || timezone;
             }
 
             getRouteData(routeNumber) {
@@ -541,6 +568,21 @@
         }
 
         const tool = new RouteConvergenceTool();
+
+        function updateTimezone(routeNumber) {
+            const locationInput = document.getElementById(`location${routeNumber}`);
+            const timezoneDisplay = document.getElementById(`timezone${routeNumber}`);
+            
+            const location = locationInput.value.trim();
+            if (location) {
+                const timezone = tool.detectTimezone(location);
+                const timezoneName = tool.getTimezoneName(timezone);
+                timezoneDisplay.value = timezoneName;
+            } else {
+                timezoneDisplay.value = '';
+                timezoneDisplay.placeholder = 'Enter location code above';
+            }
+        }
 
         function checkConvergence() {
             const loadingDiv = document.getElementById('loading');
