--- a/index.html
+++ b/index.html
@@ -228,6 +228,11 @@
                 <div class="route-section">
                     <div class="route-title">Route 1</div>
                     
+                     <div class="form-group">
+                        <label for="originschedulercode1">Origin Scheduler Code:</label>
+                        <input type="text" id="originschedulercode1" placeholder="Enter origin code" oninput="updateOriginTimezone(1)">
+                    </div>
+
                     <div class="form-group">
                         <label for="originAddress1">Origin Address:</label>
                         <input type="text" id="originAddress1" placeholder="Enter origin address" oninput="updateOriginTimezone(1)">
@@ -268,6 +273,11 @@
                 <div class="route-section">
                     <div class="route-title">Route 2</div>
                     
+                    <div class="form-group">
+                        <label for="originschedulercode2">Origin Scheduler Code:</label>
+                        <input type="text" id="originschedulercode2" placeholder="Enter origin code" oninput="updateOriginTimezone(1)">
+                    </div>
+
                     <div class="form-group">
                         <label for="originAddress2">Origin Address:</label>
                         <input type="text" id="originAddress2" placeholder="Enter origin address" oninput="updateOriginTimezone(2)">
